--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -498,6 +498,7 @@
 
 
     $(document).ready(function() {
+        onMessages();
         connect();
     });
 
@@ -520,7 +521,7 @@
     // websocket이 연결된 경우 (확인 완료)
     function onConnected() {
         // Subscribe 해당 토픽을 구독함 (해당 boardid 에 대해서 구독)
-        stompClient.subscribe("/user/topic/" + chatRoomId, onMessages);
+        // stompClient.subscribe("/user/topic/" + chatRoomId, onMessages);
         stompClient.subscribe("/topic/" + chatRoomId, onMessageReceived);
 
         console.log("구독");
@@ -537,61 +538,37 @@
         connectingElement.style.color = 'red';
     }
 
-    function onMessages(payload) {
-        var chatting = JSON.parse(payload.body);
+    function onMessages() {
+        $.ajax({
+            type: "GET",
+            url : "/api/chat/messages/" + id,
+            contentType : 'application/json',
+            success: function (data) {
+                console.log(data);
+                var chatting = data;
 
-        chatting.forEach(function (chatItem) {
-            var messageElement = document.createElement('li');
-            if (chatItem.username === username) {
-                console.log(chatItem.nickname);
-                messageElement.classList.add('chat-message2');
+                chatting.forEach(function (chatItem) {
+                    var messageElement = document.createElement('li');
+                    var avatarElement = document.createElement('i');
+                    var usernameElement = document.createElement('span');
+                    var textElement = document.createElement('p');
 
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chatItem.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chatItem.nickname);
+                    messageElement.classList.add(chatItem.username === username ? 'chat-message2' : 'chat-message');
+                    avatarElement.style['background-color'] = getAvatarColor(chatItem.nickname);
+                    avatarElement.appendChild(document.createTextNode(chatItem.nickname[0]));
+                    usernameElement.appendChild(document.createTextNode(chatItem.nickname));
+                    textElement.appendChild(document.createTextNode(chatItem.message));
 
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chatItem.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chatItem.nickname);
+                    messageElement.appendChild(avatarElement);
+                    messageElement.appendChild(usernameElement);
+                    messageElement.appendChild(textElement);
 
-                messageElement.appendChild(avatarElement);
+                    messageArea.appendChild(messageElement);
+                });
 
-                var usernameElement = document.createElement('span');
-                var usernameText = document.createTextNode(chatItem.nickname);
-                usernameElement.appendChild(usernameText);
-                messageElement.appendChild(usernameElement);
-            } else {
-                console.log(chatItem.nickname);
-                messageElement.classList.add('chat-message');
-
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chatItem.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chatItem.nickname);
-
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chatItem.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chatItem.nickname);
-
-                messageElement.appendChild(avatarElement);
-
-                var usernameElement = document.createElement('span');
-                var usernameText = document.createTextNode(chatItem.nickname);
-                usernameElement.appendChild(usernameText);
-                messageElement.appendChild(usernameElement);
+                messageArea.scrollTop = messageArea.scrollHeight;
             }
-            var textElement = document.createElement('p');
-            var messageText = document.createTextNode(chatItem.message);
-            textElement.appendChild(messageText);
-
-            messageElement.appendChild(textElement);
-
-            messageArea.appendChild(messageElement);
-            messageArea.scrollTop = messageArea.scrollHeight;
-        });
+        })
     }
 
     function onMessageReceived(payload) {
