--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -376,7 +376,7 @@
 
         <div class="bottom-bottom">
             <div class="bottom-bottom-left">
-                <a class = "category-title" href="/api/posts/categories/3">질문</a>
+                <a class = "category-title" href="/api/posts/categories/3">문제은행</a>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center"
                         th:each="exam : ${exams}"  th:onclick="'gotoPost(\'' + ${exam.id} + '\')'">
@@ -389,14 +389,14 @@
 
             <div class="bottom-bottom-right">
                 <a class = "category-title" href="/api/posts/categories/4">자유게시판</a>
-                <!--                <ul class="list-group list-group-flush">-->
-                <!--                    <li class="list-group-item d-flex justify-content-between align-items-center"-->
-                <!--                        th:each="project : ${projectList}"  th:onclick="'gotoPost(\'' + ${project.id} + '\')'">-->
-                <!--                        <span th:text="${project.title}">제목</span>-->
-                <!--                        <span th:text="${project.nickname}">작성자</span>-->
-                <!--                        <span class="badge bg-primary rounded-pill">조회수: 1</span>-->
-                <!--                    </li>-->
-                <!--                </ul>-->
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-between align-items-center"
+                        th:each="forum : ${forums}"  th:onclick="'gotoPost(\'' + ${forum.id} + '\')'">
+                        <span th:text="${forum.title}">제목</span>
+                        <span th:text="${forum.nickname}">작성자</span>
+                        <span class="badge bg-primary rounded-pill"  th:text="|조회수: ${forum.view_cnt}|">조회수: 1</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
