--- a/src/main/resources/templates/backAdmins.html
+++ b/src/main/resources/templates/backAdmins.html
@@ -37,10 +37,7 @@
         }
 
         html, body {
-            /*height: 100%;*/
             width: 100%;
-            margin: 0;
-            padding: 0;
             color: #101014;
             background-color: #f5f5fa;
             display: flex;
@@ -280,7 +277,7 @@
             justify-content: flex-start;
             align-items: center; /* 가로 정렬을 중앙에서 시작하도록 변경 */
             width: 50%;
-            height: 100vh;
+            height: auto;
             background-color: white;
             border: 1px solid #ddd;
             margin-left: 10%;
@@ -330,7 +327,7 @@
             max-height: 90vh; /* 컨텐츠의 최대 높이 설정 */
             overflow-y: auto; /* 컨텐츠가 넘칠 때 수직 스크롤바를 추가합니다 */
             gap: 10px;
-            width: 80%;
+            width: 90%;
             justify-content: flex-start; /* 요소들을 왼쪽 정렬로 유지 */
             align-items: flex-start; /* 요소들을 위쪽 정렬로 유지 */
         }
