--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1028,7 +1028,7 @@
             success: function (data) {
                 removeToken();
                 alert("로그아웃 성공");
-                window.location.reload();
+                window.location.href="/main";
             },
             error: function () {
                 alert("로그아웃 실패");
